--- a/index.html
+++ b/index.html
@@ -1,13 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <link rel="icon" href="/favicon.ico">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vite App</title>
-  </head>
-  <body>
-    <div id="app"></div>
-    <script type="module" src="/src/main.js"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8">
+  <link rel="icon"
+    href="https://cdn.prod.website-files.com/60467fdad665324c974b586c/6075d267ac59af55d38ec376_icono_32.png">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Subscription Flow</title>
+  <meta name="description"
+    content="A subscription flow for Zapping app, offering a user-friendly interface for selecting subscription plans and completing registration.">
+</head>
+
+<body>
+  <div id="app"></div>
+  <script type="module" src="/src/main.js"></script>
+</body>
+
 </html>
